--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo</title>
     <style>
         body{
+           /* height: 180vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
             background-size: cover ;
+            background-attachment: fixed;*/
+
+            /* shorthand - background 
+            color > image > position > repeat > {size} > attachment
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -25,7 +33,7 @@
 <body>
     <main>
         <h1>Teste de imagens de fundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quod consectetur eveniet. Reprehenderit alias nam debitis earum quis, ab iure a est vero in eligendi cumque tenetur quam accusantium ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus odit delectus blanditiis, adipisci porro exercitationem nulla quidem cumque reiciendis? Distinctio, id accusamus et porro similique mollitia laboriosam expedita molestias asperiores! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi dolores, illo, fugit ex vero cumque ipsum necessitatibus recusandae earum nesciunt animi nam aut iure corrupti nisi? Odio vitae laborum ad.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quod consectetur eveniet. Reprehenderit alias nam debitis earum quis, ab iure a est vero in eligendi cumque tenetur quam accusantium ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus odit delectus blanditiis, adipisci porro exercitationem nulla quidem cumque reiciendis? Distinctio, id accusamus et porro similique mollitia laboriosam expedita molestias asperiores! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi dolores, illo, fugit ex vero cumque ipsum necessitatibus recusandae earum nesciunt animi nam aut iure corrupti nisi? Odio vitae laborum ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa non dignissimos repudiandae dicta, asperiores voluptatum nisi, aliquid maiores, exercitationem voluptates suscipit. Aliquid, amet earum? Vel soluta expedita necessitatibus ducimus beatae! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui officia consequuntur assumenda reiciendis deleniti fugit delectus, nam quae! Dignissimos doloribus sequi tempora ea cum nostrum quasi vitae consequatur rem voluptas? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo impedit eaque totam delectus provident omnis doloremque unde? Cupiditate ut debitis, eos eligendi deleniti pariatur autem excepturi odio nihil, reprehenderit tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora eum iusto repudiandae aperiam consequuntur reprehenderit. Reprehenderit expedita optio, rerum tempora praesentium beatae quis harum voluptate consequuntur fugit quod fuga ad? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur explicabo laudantium, voluptatibus aperiam impedit inventore sed alias dolor sapiente non obcaecati, quas officia sunt est! Sed nisi labore nesciunt consequuntur.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quod consectetur eveniet. Reprehenderit alias nam debitis earum quis, ab iure a est vero in eligendi cumque tenetur quam accusantium ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus odit delectus blanditiis, adipisci porro exercitationem nulla quidem cumque reiciendis? Distinctio, id accusamus et porro similique mollitia laboriosam expedita molestias asperiores! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi dolores, illo, fugit ex vero cumque ipsum necessitatibus recusandae earum nesciunt animi nam aut iure corrupti nisi? Odio vitae laborum ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa non dignissimos repudiandae dicta, asperiores voluptatum nisi, aliquid maiores, exercitationem voluptates suscipit. Aliquid, amet earum? Vel soluta expedita necessitatibus ducimus beatae! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui officia consequuntur assumenda reiciendis deleniti fugit delectus, nam quae! Dignissimos doloribus sequi tempora ea cum nostrum quasi vitae consequatur rem voluptas? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo impedit eaque totam delectus provident omnis doloremque unde? Cupiditate ut debitis, eos eligendi deleniti pariatur autem excepturi odio nihil, reprehenderit tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora eum iusto repudiandae aperiam consequuntur reprehenderit. Reprehenderit expedita optio, rerum tempora praesentium beatae quis harum voluptate consequuntur fugit quod fuga ad? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur explicabo laudantium, voluptatibus aperiam impedit inventore sed alias dolor sapiente non obcaecati, quas officia sunt est! Sed nisi labore nesciunt consequuntur.</p>
     </main>
 </body>
 </html>
