--- a/ex026/mq005/index.html
+++ b/ex026/mq005/index.html
@@ -6,8 +6,9 @@
     <title>Media query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>meu site</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
@@ -28,6 +29,14 @@
         </article>
     </main>
     <script>
+
+        function mudouTamanho() {
+            if(window.innerwidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
         function clickMenu(){
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
